Commons now packaged as a Maven package